# shinemonitor-api

./: .pre-commit-config.yaml  README.md  hacs.json  info.md
.github/workflows/: release.yml
custom_components/shinemonitor/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
go/: README.md  actions.go  client.go  client_test.go  go.mod
mock-server/: README.md  pyproject.toml
mock-server/shinemonitor_mock/: __init__.py  __main__.py  _actions.py  server.py
python/: Makefile  README.md  pyproject.toml
python/examples/: async_last_data.py  complex_daily_data_query.py  get_connected_devices.py  get_device_settings.py  simple_daily_data_query.py
python/shinemonitor_api/: __init__.py  _actions.py  _client_async.py  _client_sync.py  _methods.py  _protocol.py  aio.py  models.py
python/tests/: conftest.py  test_async_client.py  test_generated_actions.py  test_protocol.py  test_sync_client.py
rust/: Cargo.toml  README.md
rust/src/: actions.rs  lib.rs
rust/tests/: mock.rs
scripts/: bump.sh  codegen.py
spec/: README.md  endpoints.yaml  error_codes.yaml
