[project]
name = "shinemonitor-mock"
version = "0.1.0"
description = "Reusable mock of the ShineMonitor REST API for cross-language tests"
authors = [{ name = "David Freire", email = "davidsmfreire@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
shinemonitor-mock = "shinemonitor_mock.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shinemonitor_mock"]
