[package]
name = "shinemonitor-api"
version = "0.6.5"
authors = ["David Freire"]
edition = "2021"
description = "ShineMonitor REST API client (WatchPower, SolarPower, and other Voltronic-inverter vendor apps)."
repository = "https://github.com/davidsmfreire/shinemonitor-api"
homepage = "https://github.com/davidsmfreire/shinemonitor-api"
documentation = "https://docs.rs/shinemonitor-api"
readme = "README.md"
license = "MIT"
keywords = ["shinemonitor", "watchpower", "solar", "inverter", "voltronic"]
categories = ["api-bindings"]

[lib]
name = "shinemonitor_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
